--- a/TechMonster/Base.lproj/Main.storyboard
+++ b/TechMonster/Base.lproj/Main.storyboard
@@ -59,26 +59,28 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="gold_button.png" translatesAutoresizingMaskIntoConstraints="NO" id="8FI-kS-vTn">
-                                <rect key="frame" x="50" y="475" width="275" height="146"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U4b-73-6de">
-                                <rect key="frame" x="110" y="527" width="155" height="43"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="MisakiGothic" family="MisakiGothic" pointSize="31"/>
-                                <state key="normal" title="冒険に行く">
-                                    <color key="titleColor" red="0.82547360749999998" green="0.56274609799999997" blue="0.24520422610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                            </button>
                             <progressView opaque="NO" tag="1" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="T2t-mn-und">
                                 <rect key="frame" x="48" y="387" width="277" height="3"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </progressView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U4b-73-6de">
+                                <rect key="frame" x="29" y="512" width="330" height="100"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="MisakiGothic" family="MisakiGothic" pointSize="31"/>
+                                <state key="normal" title="冒険に行く" backgroundImage="gold_button.png">
+                                    <color key="titleColor" red="0.82547360749999998" green="0.56274609799999997" blue="0.24520422610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="startBattle" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Et-Ll-maC"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
+                        <outlet property="levelLabel" destination="GOS-fD-coX" id="qbZ-0U-r8N"/>
+                        <outlet property="nameLabel" destination="XuC-Bz-ArR" id="nRB-dq-YUY"/>
+                        <outlet property="staminaBar" destination="T2t-mn-und" id="ezM-zc-Wcv"/>
                         <segue destination="6L1-RF-rRE" kind="presentation" identifier="startBattle" modalTransitionStyle="crossDissolve" id="pwD-J5-nGf"/>
                     </connections>
                 </viewController>
@@ -110,18 +112,6 @@
                                 <rect key="frame" x="135" y="86" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="gold_button.png" translatesAutoresizingMaskIntoConstraints="NO" id="0so-JY-ctN">
-                                <rect key="frame" x="50" y="473" width="275" height="146"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="faC-rt-9am">
-                                <rect key="frame" x="126" y="525" width="124" height="43"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="MisakiGothic" family="MisakiGothic" pointSize="31"/>
-                                <state key="normal" title="こうげき">
-                                    <color key="titleColor" red="0.82547360749999998" green="0.56274609799999997" blue="0.24520422610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="yusya.png" translatesAutoresizingMaskIntoConstraints="NO" id="puf-aH-cXh">
                                 <rect key="frame" x="-30" y="279" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -148,9 +138,30 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ys3-Lk-bY3">
+                                <rect key="frame" x="23" y="519" width="330" height="91"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="MisakiGothic" family="MisakiGothic" pointSize="31"/>
+                                <state key="normal" title="こうげき" backgroundImage="gold_button.png">
+                                    <color key="titleColor" red="0.82547360749999998" green="0.56274609799999997" blue="0.24520422610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="startBattle" destination="BYZ-38-t0r" eventType="touchUpInside" id="O7m-Ws-0JP"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
+                    <connections>
+                        <outlet property="attackButton" destination="Ys3-Lk-bY3" id="0dX-cQ-zvr"/>
+                        <outlet property="backgroundImageView" destination="Tja-0X-NpO" id="4yo-Bd-BHd"/>
+                        <outlet property="enemyHPBar" destination="yMy-PQ-XJ0" id="33c-ng-aa2"/>
+                        <outlet property="enemyImageView" destination="hRb-3G-2rT" id="e1g-EN-EcH"/>
+                        <outlet property="enemyNameLabel" destination="XMS-WE-KZW" id="xGn-YI-hWX"/>
+                        <outlet property="playerHPBar" destination="6Fp-RP-o7k" id="tkK-bq-ktH"/>
+                        <outlet property="playerImageView" destination="puf-aH-cXh" id="Ji1-5g-7c7"/>
+                        <outlet property="playerNamelabel" destination="y8H-VL-Jbq" id="3Yi-Oe-E9a"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A0r-5F-grG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
